syntax = "proto3";

package seria;
option go_package = "github.com/ankur-anand/kvalchemy/internal/benchtests/serialization";

// TxnStatus enum
enum TxnStatus {
  TXN_NONE = 0;
  BEGIN = 1;
  PREPARE = 2;
  COMMIT = 3;
}

// LogOperation enum
enum LogOperation {
  NOOP = 0;
  INSERT = 1;
  DELETE = 2;
  TXN_MARKER = 3;
}

// ValueType enum
enum ValueType {
  FULL = 0;      // Not a chunked value
  CHUNKED = 1;
  COLUMN = 2;
}

// Column Entry: Supports multiple column updates per WAL record
message ColumnEntry {
  string column_name = 1;
  bytes column_value = 2;
  uint32 crc32_checksum = 3;
}

// WalRecord is the main record structure for the Write-Ahead Log
message WalRecord {
  // Scalar fields
  uint64 index = 1;
  uint64 hlc = 2;
  uint32 crc32_checksum = 3;

  // Enum fields
  LogOperation operation = 4;
  TxnStatus txn_status = 5;
  ValueType value_type = 6;

  // Variable-sized fields
  bytes txn_id = 7;
  bytes prev_txn_wal_index = 8;  // index of the previous entry in the same transaction

  bytes key = 9;  // required in flatbuffers but proto3 doesn't have required fields
  bytes value = 10;
  repeated ColumnEntry columns = 11;
}